--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
-HOST=0.0.0.0
+HOST=10.30.10.81
 PORT=1337
+
 APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 JWT_SECRET=tobemodified
 ENCRYPTION_KEY=tobemodified
+
+DATABASE_CLIENT=postgres
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=strapi
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=root
+DATABASE_SSL=false
+DATABASE_FILENAME=
+JWT_SECRET=/SMmoWRppJcyHpobyYO2Cg==
